--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="main_connect">Connect</string>
     <string name="main_reconnect">Reconnect</string>
     <string name="main_disconnect">Disconnect</string>
+
+    <string name="main_search">Scan</string>
+
 </resources>
